add_executable(pkicxx-test src/pkicxx-test.cpp)
# Basic memory bug catcher
target_compile_options(pkicxx-test PRIVATE -fsanitize=address -fno-omit-frame-pointer)
target_link_options(pkicxx-test PRIVATE -fsanitize=address)
target_link_libraries(pkicxx-test PRIVATE pkicxx)
target_include_directories(pkicxx-test PRIVATE "${CMAKE_SOURCE_DIR}/include")
add_test(NAME "Pkic Init" COMMAND pkicxx-test --pkicInit)
add_test(NAME "Keypair generation" COMMAND pkicxx-test --pairGen)
add_test(NAME "Keypair re-generation" COMMAND pkicxx-test --pairRegen)
add_test(NAME "Keypair multi-generation" COMMAND pkicxx-test --pairMultigen)
add_test(NAME "DER get privkey" COMMAND pkicxx-test --getPrivDER)
add_test(NAME "DER get pubkey" COMMAND pkicxx-test --getPubDER)
add_test(NAME "DER load privkey" COMMAND pkicxx-test --loadPrivDER)
add_test(NAME "DER load pubkey" COMMAND pkicxx-test --loadPubDER)
add_test(NAME "PEM priv get" COMMAND pkicxx-test --getPrivPEM "${CMAKE_SOURCE_DIR}/data/test_data/priv.pem")
add_test(NAME "PEM pub get" COMMAND pkicxx-test --getPubPEM "${CMAKE_SOURCE_DIR}/data/test_data/pub.pem")
add_test(NAME "PEM bundle get" COMMAND pkicxx-test --getBundlePEM "${CMAKE_SOURCE_DIR}/data/test_data/bundle.pem")
add_test(NAME "PEM priv string load" COMMAND pkicxx-test --loadPrivPEM)
add_test(NAME "PEM pub string load" COMMAND pkicxx-test --loadPubPEM)
add_test(NAME "PEM bundle string load" COMMAND pkicxx-test --loadBundlePEM)
add_test(NAME "PEM import privkey" COMMAND pkicxx-test --importPrivPEM "${CMAKE_SOURCE_DIR}/data/test_data/priv.pem")
add_test(NAME "PEM import pubkey" COMMAND pkicxx-test --importPubPEM "${CMAKE_SOURCE_DIR}/data/test_data/pub.pem")
add_test(NAME "PEM import bundle" COMMAND pkicxx-test --importBundlePEM "${CMAKE_SOURCE_DIR}/data/test_data/bundle.pem")
add_test(NAME "PEM priv export" COMMAND pkicxx-test --exportPrivPEM)
add_test(NAME "PEM pub export" COMMAND pkicxx-test --exportPubPEM)
add_test(NAME "PEM bundle export" COMMAND pkicxx-test --exportBundlePEM)
add_test(NAME "Encrypt" COMMAND pkicxx-test --encrypt)
add_test(NAME "Decrypt" COMMAND pkicxx-test --decrypt)
add_test(NAME "Hash" COMMAND pkicxx-test --hash)
add_test(NAME "Sign" COMMAND pkicxx-test --sign)
add_custom_command(TARGET pkicxx-test POST_BUILD COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure)


