add_executable(tancrypt-test src/tancrypt-test.cpp)
# Basic memory bug catcher
target_compile_options(tancrypt-test PRIVATE -fsanitize=address -fno-omit-frame-pointer)
target_link_options(tancrypt-test PRIVATE -fsanitize=address)
target_link_libraries(tancrypt-test PRIVATE tancrypt)
target_include_directories(tancrypt-test PRIVATE "${CMAKE_SOURCE_DIR}/include")
add_test(NAME "Pkic Init" COMMAND tancrypt-test --pkicInit)
add_test(NAME "Keypair generation" COMMAND tancrypt-test --pairGen)
add_test(NAME "Keypair re-generation" COMMAND tancrypt-test --pairRegen)
add_test(NAME "Keypair multi-generation" COMMAND tancrypt-test --pairMultigen)
add_test(NAME "DER get privkey" COMMAND tancrypt-test --getPrivDER)
add_test(NAME "DER get pubkey" COMMAND tancrypt-test --getPubDER)
add_test(NAME "DER load privkey" COMMAND tancrypt-test --loadPrivDER)
add_test(NAME "DER load pubkey" COMMAND tancrypt-test --loadPubDER)
add_test(NAME "PEM priv get" COMMAND tancrypt-test --getPrivPEM "${CMAKE_SOURCE_DIR}/data/test_data/priv.pem")
add_test(NAME "PEM pub get" COMMAND tancrypt-test --getPubPEM "${CMAKE_SOURCE_DIR}/data/test_data/pub.pem")
add_test(NAME "PEM bundle get" COMMAND tancrypt-test --getBundlePEM "${CMAKE_SOURCE_DIR}/data/test_data/bundle.pem")
add_test(NAME "PEM priv string load" COMMAND tancrypt-test --loadPrivPEM)
add_test(NAME "PEM pub string load" COMMAND tancrypt-test --loadPubPEM)
add_test(NAME "PEM bundle string load" COMMAND tancrypt-test --loadBundlePEM)
add_test(NAME "PEM import privkey" COMMAND tancrypt-test --importPrivPEM "${CMAKE_SOURCE_DIR}/data/test_data/priv.pem")
add_test(NAME "PEM import pubkey" COMMAND tancrypt-test --importPubPEM "${CMAKE_SOURCE_DIR}/data/test_data/pub.pem")
add_test(NAME "PEM import bundle" COMMAND tancrypt-test --importBundlePEM "${CMAKE_SOURCE_DIR}/data/test_data/bundle.pem")
add_test(NAME "PEM priv export" COMMAND tancrypt-test --exportPrivPEM)
add_test(NAME "PEM pub export" COMMAND tancrypt-test --exportPubPEM)
add_test(NAME "PEM bundle export" COMMAND tancrypt-test --exportBundlePEM)
add_test(NAME "Encrypt" COMMAND tancrypt-test --encrypt)
add_test(NAME "Decrypt" COMMAND tancrypt-test --decrypt)
add_test(NAME "Hash" COMMAND tancrypt-test --hash)
add_test(NAME "Sign" COMMAND tancrypt-test --sign)
add_test(NAME "Verify" COMMAND tancrypt-test --verify)
add_test(NAME "AES key constructor v1" COMMAND tancrypt-test --aesKeyInit1)
add_test(NAME "AES key constructor v2" COMMAND tancrypt-test --aesKeyInit2)
add_test(NAME "AES encrypt v1" COMMAND tancrypt-test --aesEncryptV1)
add_test(NAME "AES encrypt v2" COMMAND tancrypt-test --aesEncryptV2)
add_test(NAME "AES decrypt v1" COMMAND tancrypt-test --aesDecryptV1)
add_test(NAME "AES decrypt v2" COMMAND tancrypt-test --aesDecryptV2)
add_test(NAME "AES get nonce" COMMAND tancrypt-test --getNonce)
add_custom_command(TARGET tancrypt-test POST_BUILD COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure)


